2008-11-22 Braden McDaniel  <braden@endoframe.com>

	Made openvrml::node_traverser::halted and
	openvrml::node_traverser::traversed const.

	* src/libopenvrml/openvrml/node.cpp
	(openvrml::node_traverser::halted() const): Made const.
	(openvrml::node_traverser::traversed(node &) const): Made const.
	* src/libopenvrml/openvrml/node.h
	(openvrml::node_traverser): Made the halted and traversed member
	functions const.

2008-11-21 Braden McDaniel  <braden@endoframe.com>

	Moved node implementations to dynamically loaded libraries.

	* ide-projects/Windows/VisualC9_0/OpenVRML/OpenVRML.sln
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj:
	Removed dependencies libpng, zlib, and FreeType; added
	libopenvrml/openvrml/local/node_metatype_registry_impl.{cpp,h};
	removed libopenvrml/openvrml/vrml97node.{cpp,h}, removed
	libopenvrml/openvrml/x3d_cad_geometry.{cpp,h}, removed
	libopenvrml/openvrml/x3d_core.{cpp,h}, removed
	libopenvrml/openvrml/x3d_dis.{cpp,h}, removed
	libopenvrml/openvrml/x3d_environmental_effects.{cpp,h}, removed
	libopenvrml/openvrml/x3d_event_utilities.{cpp,h}, removed
	libopenvrml/openvrml/x3d_geometry2d.{cpp,h}, removed
	libopenvrml/openvrml/x3d_geospatial.{cpp,h}, removed
	libopenvrml/openvrml/x3d_grouping.{cpp,h}, removed
	libopenvrml/openvrml/x3d_hanim.{cpp,h}, removed
	libopenvrml/openvrml/x3d_interpolation.{cpp,h}, removed
	libopenvrml/openvrml/x3d_key_device_sensor.{cpp,h}, removed
	libopenvrml/openvrml/x3d_networking.{cpp,h}, removed
	libopenvrml/openvrml/x3d_nurbs.{cpp,h}, removed
	libopenvrml/openvrml/x3d_rendering.{cpp,h}, removed
	libopenvrml/openvrml/x3d_shape.{cpp,h} removed
	libopenvrml/openvrml/x3d_texturing.{cpp,h}.
	* ide-projects/Windows/VisualC9_0/OpenVRML/vrml97/vrml97.vcproj:
	Build as a DLL; added dependencies libpng, zlib, and FreeType;
	added node/vrml97/register_node_metatypes.cpp.
	* ide-projects/Windows/VisualC9_0/OpenVRML/x3d-cad-geometry/x3d-cad-geometry.vcproj:
	Build as a DLL; added